--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Code sa</title>
-  <base href="/">
+  <base href="/new/">
   <link rel="shortcut icon" href="assets/images/logoBlack1.svg" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
