--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body id="body">
-  <!-- <div class="splash-screen" id="splash-screen">
+  <div class="splash-screen" id="splash-screen">
     <div class="logo-wrapper">
       <div class="logo-pulse"></div>
       <img src="assets/images/WhatsApp Video 2025-05-11 at 5.03.15 PM.gif" alt="Logo" class="logo" />
     </div>
-  </div> -->
+  </div>
   <app-root></app-root>
 
   <script src="assets/js/splash-loader.js"></script>
