--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
   <base href="/">
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="">
+  <meta property="og:description" content="">
+  <meta property="og:image" content="">
+  <meta property="og:url" content="">
+  <meta property="og:type" content="website">
 </head>
 
 <body id="body">
