--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <div class="splash-screen" id="splash-screen">
     <div class="logo-wrapper">
       <div class="logo-pulse"></div>
-      <img src="assets/images/WhatsApp Video 2025-05-11 at 5.03.15 PM.gif" alt="Logo" class="logo" />
+      <img src="assets/images/Animated-Logo-loader.gif" alt="Logo" class="logo" />
     </div>
   </div>
   <app-root></app-root>
